# DxvUI

./: .gitignore  CMakeLists.txt
examples/: main.cpp
include/DxvUI/: ActionRegistry.h  Appearance.h  Colors.h  DxvUI.h  EventManager.h  LayoutProperties.h  Log.h  Scene.h  SceneNode.h  Style.h  WidgetFactory.h  core.h
include/DxvUI/containers/: CenterContainer.h  Container.h
include/DxvUI/interfaces/: IEventSource.h  IRenderer.h  ITexture.h  IVisual.h
include/DxvUI/renderers/: SDLRenderer.h
include/DxvUI/sources/: SDLEventSource.h
include/DxvUI/style/: Color.h  Colors.h  Style.h  StyleResolver.h  Theme.h
include/DxvUI/visuals/: ButtonVisual.h
include/DxvUI/widgets/: Button.h  Label.h
src/: ActionRegistry.cpp  Appearance.cpp  Button.cpp  Color.cpp  EventManager.cpp  Log.cpp  Scene.cpp  SceneNode.cpp  WidgetFactory.cpp
src/containers/: CenterContainer.cpp
src/renderers/: SDLRenderer.cpp  SDLRenderer.h
src/sources/: SDLEventSource.cpp
src/style/: Color.cpp  StyleResolver.cpp  Theme.cpp
src/visuals/: ButtonVisual.cpp
src/widgets/: Button.cpp  Label.cpp
tests/: ColorTests.cpp
